--- a/src/assets/css/directoryContainer.css
+++ b/src/assets/css/directoryContainer.css
@@ -1,4 +1,4 @@
-.btn {
+#sortBtn {
   font-family: "Rowdies", cursive;
   margin: 30px;
 }
@@ -8,7 +8,17 @@
   justify-content: center;
 }
 
+#sortRow {
+  display: flex;
+  justify-content: center;
+}
+
 #employeeRow {
   display: flex;
   justify-content: center;
+}
+
+.input-group {
+  width: 50%;
+  margin-bottom: 20px;
 }
