removing excess code from directoryContainer.css

--- a/src/assets/css/directoryContainer.css
+++ b/src/assets/css/directoryContainer.css
@@ -6,16 +6,8 @@
   color: white;
 }
 
-#filterRow {
-  display: flex;
-  justify-content: center;
-}
-
-#sortRow {
-  display: flex;
-  justify-content: center;
-}
-
+#filterRow,
+#sortRow,
 #employeeRow {
   display: flex;
   justify-content: center;
